[gd_scene load_steps=8 format=3 uid="uid://b46qi5brctt5j"]

[ext_resource type="Texture2D" uid="uid://b1oftsji72ml0" path="res://Graphics/MySprites/UI/MyPaper.png" id="1_1cx2j"]
[ext_resource type="Script" uid="uid://c5axyjit7poum" path="res://Scenes/Level/Menu/city_menu.gd" id="1_oomk2"]
[ext_resource type="Texture2D" uid="uid://cr3dhfvewkdn2" path="res://Graphics/MySprites/UI/OG City new pics.png" id="3_8penr"]
[ext_resource type="Texture2D" uid="uid://bec3xe04xd4lc" path="res://Graphics/MySprites/UI/New City.png" id="4_nxhug"]
[ext_resource type="Texture2D" uid="uid://cssg5d55sakp2" path="res://assets/icons/PremadeButtons_XRed.png" id="5_5d2gb"]
[ext_resource type="FontFile" uid="uid://cepgij1qabkrs" path="res://assets/fonts/BadComic-Regular.ttf" id="5_qgpux"]
[ext_resource type="Texture2D" uid="uid://eefhms0uwxi8" path="res://assets/icons/PremadeButtons_XWhiteOutline.png" id="6_qgpux"]

[node name="City Menu" type="Node2D"]
script = ExtResource("1_oomk2")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Background" type="TextureRect" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_1cx2j")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 0
offset_right = 1366.0
offset_bottom = 768.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="GridContainer" type="GridContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 50
columns = 2

[node name="CityMap1" type="TextureButton" parent="Control/MarginContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 250)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("3_8penr")
ignore_texture_size = true
stretch_mode = 0

[node name="CityMap2" type="TextureButton" parent="Control/MarginContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 400)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("4_nxhug")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_qgpux")
theme_override_font_sizes/font_size = 80
text = "Choose a Level"

[node name="Close_Button" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 1295.0
offset_top = 4.0
offset_right = 1561.0
offset_bottom = 271.0
scale = Vector2(0.25, 0.25)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("5_5d2gb")
texture_pressed = ExtResource("5_5d2gb")
texture_hover = ExtResource("6_qgpux")

[connection signal="mouse_entered" from="Control/MarginContainer/GridContainer/CityMap1" to="." method="_on_city_map_1_mouse_entered"]
[connection signal="mouse_exited" from="Control/MarginContainer/GridContainer/CityMap1" to="." method="_on_city_map_1_mouse_exited"]
[connection signal="pressed" from="Control/MarginContainer/GridContainer/CityMap1" to="." method="_on_city_v_1_pressed"]
[connection signal="mouse_entered" from="Control/MarginContainer/GridContainer/CityMap2" to="." method="_on_city_map_2_mouse_entered"]
[connection signal="mouse_exited" from="Control/MarginContainer/GridContainer/CityMap2" to="." method="_on_city_map_2_mouse_exited"]
[connection signal="pressed" from="Control/MarginContainer/GridContainer/CityMap2" to="." method="_on_city_v_2_pressed"]
[connection signal="pressed" from="Control/Close_Button" to="." method="_on_button_pressed"]
